--- a/index.html
+++ b/index.html
@@ -437,7 +437,7 @@
       font-weight: 700;
       font-size: 1.25rem; /* Adjust font size to fit the smaller header */
       color: #FFFFFF; /* White text for logo */
-      margin-left: 40px ;
+      margin-left: 5%;
     }
     .sticky-header nav {
       display: flex;
@@ -591,7 +591,7 @@
   font-family: 'Archivo Black', sans-serif;
   margin-bottom: 1rem;
   line-height: 1.2;
-  margin-left: 9.5px;
+  margin-left: 5%;
 
 }
 
@@ -599,7 +599,7 @@
   font-size: clamp(1.5rem, 3vw, 2.25rem); /* Fluid between 24px-36px */
   font-family: 'Archivo Black', sans-serif;
   line-height: 1.4;
-  margin-left: 9.5px;
+  margin-left: 5%;
 }
 
 .hero-section p {
