--- a/index.html
+++ b/index.html
@@ -444,6 +444,7 @@
   white-space: nowrap;
   flex-shrink: 0; /* Prevent shrinking */
   width: 200px; /* Fixed width */
+    margin-left:3%;
 }
 .sticky-header nav {
   display: flex;
