--- a/index.html
+++ b/index.html
@@ -472,6 +472,7 @@
   .sticky-header .logo {
     width: auto; /* Allow natural width */
     min-width: 160px; /* Prevent collapse */
+    margin-left:3%;
   }
   
   .sticky-header nav {
