--- a/index.html
+++ b/index.html
@@ -444,6 +444,7 @@
   white-space: nowrap;
   flex-shrink: 0; /* Prevent shrinking */
   width: 200px; /* Fixed width */
+    margin left:3%;
 }
 .sticky-header nav {
   display: flex;
@@ -471,6 +472,7 @@
   .sticky-header .logo {
     width: auto; /* Allow natural width */
     min-width: 160px; /* Prevent collapse */
+      margin-left:60%;
   }
   
   .sticky-header nav {
@@ -481,6 +483,7 @@
     .sticky-header .logo {
     width: auto; /* Allow natural width */
     min-width: 160px; /* Prevent collapse */
+        margin-left:90%
   }
   .sticky-header nav {
   }
@@ -488,7 +491,7 @@
       @media (max-width: 1199px) {
   .sticky-header .logo {
     width: auto;
-    margin-left: 200%;
+    margin-left: 0%;
   }
 
   body {
