--- a/index.html
+++ b/index.html
@@ -444,7 +444,7 @@
   white-space: nowrap;
   flex-shrink: 0; /* Prevent shrinking */
   width: 200px; /* Fixed width */
-    margin left:3%;
+  margin-left: calc(114px - 20px); /* Subtract header's left padding */
 }
 .sticky-header nav {
   display: flex;
