--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
       font-size: 44px; /* Adjusted to 44px */
       margin-top: 153px; /* Ensures 153px space from the top */
       margin-bottom: 97px; /* Ensures 97px space below the title */
-      text-align: center;
+margin-left:-10px;
       color: #FFFFFF;
     }
     .key-point {
@@ -447,7 +447,7 @@
   flex-shrink: 0; /* Prevent shrinking */
   width: 200px; /* Fixed width */
     /* NEW: Absolute positioning to enforce exact alignment */
-  left: calc(100px - 20px); /* Subtract header's left padding */
+  left: calc(104px - 20px); /* Subtract header's left padding */
 }
 .sticky-header nav {
   display: flex;
@@ -621,7 +621,7 @@
   font-family: 'Archivo Black', sans-serif;
   margin-bottom: 1rem;
   line-height: 1.2;
-  margin-left: 0.5%;
+  margin-left: 40px;
 
 }
 
@@ -629,7 +629,7 @@
   font-size: clamp(1.5rem, 3vw, 2.25rem); /* Fluid between 24px-36px */
   font-family: 'Archivo Black', sans-serif;
   line-height: 1.4;
-  margin-left: 5%;
+  margin-left: 40px;
 }
 
 .hero-section p {
@@ -638,7 +638,7 @@
   font-size: clamp(1rem, 1.5vw, 1.25rem); /* Fluid between 16px-20px */
   line-height: 1.4;
   max-width: 600px;
-  margin-left: 9.5px;
+  margin-left:40px;
 
 }
 
@@ -865,7 +865,8 @@
   <section id="hero" class="hero-section">
     <div class="container">
       <h1 class="display-4 fw-bold" style="margin-top: 20px;"> Agile </h1>
-      <h2 class="display-4 fw-bold">La strada verso il futuro dello sviluppo software</h2>
+      <h2 class="display-4 fw-bold">La strada verso il futuro 
+        <br> dello sviluppo software </br>  </h2>
       <p class="lead mt-3">Nel mondo dello sviluppo software, l’adattabilità è fondamentale. La
 metodologia Agile risponde a questa esigenza con un approccio flessibile e
 centrato sul cliente, basato su iterazioni, collaborazione e valore continuo.
