--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
     margin-top: 125px;
     margin-bottom: 40px;
     text-align: left;
-    margin-left: 93.5px;
+    margin-left: -5px;
     color: white;
 }
 
@@ -257,7 +257,7 @@ margin-left:-10px;
     width: 80px; /* Make the container square */
     height: 80px; /* Make the container square */
     border-radius: 50%; /* Create a circle */
-    background-color: #0A192F; /* Background color of the circle */
+    background-color: #002859; /* Background color of the circle */
     display: flex;
     justify-content: center;
     align-items: center;
@@ -877,7 +877,7 @@ tradizionali per aiutare a scegliere l’approccio più adatto al proprio contes
     </div>
   </section>
   <!-- HTML for the 7 Key Points Section -->
-  <section id="key-points " class="key-points-section">
+  <section id="key-points" class="key-points-section">
     <div class="container">
       <h2 class="section-title">I sette punti chiave della metodologia Agile      </h2>
       <div class="key-point">
@@ -960,7 +960,7 @@ il suo sviluppo.</li>
         <div style="margin-bottom: 142px;"></div>
   </section>
   <section>
- <h1 style="font-size: 44px; font-family: 'Archivo Black', sans-serif; margin-top: 63px; margin-bottom: 50px; margin-left: 87px;">Differenze tra Agile e Waterfall</h1>
+<h1 style="font-size: 44px; font-family: 'Archivo Black', sans-serif; margin-top: 63px; margin-bottom: 50px; margin-left: 130px; color: #052658;">Differenze tra Agile e Waterfall</h1>
 <div class="text-center">
   <img src="img/ima.jpg" alt="Example Image" class="img-fluid" style="width: 60%; margin-bottom: 60px;">
 </div>
@@ -974,16 +974,16 @@ il suo sviluppo.</li>
             <h3>Agile<br><small class="text-muted">Approccio interattivo</small></h3>
             <p>Approccio interattivo: Si basa su iterazioni brevi e incrementali, chiamate sprint. Questo modello è estremamente flessibile e adattabile, permettendo di incorporare cambiamenti durante il processo. Favorisce il coinvolgimento continuo degli stakeholder durante tutto il ciclo di vita del progetto, assicurando che le esigenze degli utenti siano costantemente soddisfatte. La gestione dei rischi è proattiva, identificando e affrontando precocemente le potenziali criticità.</p>
             <div class="d-block d-lg-none text-center mt-3">
-              <img src="img/img4.jpg" alt="Waterfall Model" class="img-fluid rounded" style="width: 60%;">
+              <img src="img/img4.png" alt="Waterfall Model" class="img-fluid rounded" style="width: 60%;">
             </div>
           </div>
           <div class="col-lg-6 text-center d-none d-lg-block">
-            <img src="img/img4.jpg" alt="Waterfall Model" class="img-fluid rounded" style="width: 60%;">
+            <img src="img/img4.png" alt="Waterfall Model" class="img-fluid rounded" style="width: 60%;">
           </div>
         </div>
         <div class="row align-items-center">
           <div class="col-lg-6 text-center order-lg-2">
-            <img src="img/img3.jpg" alt="Agile Framework" class="img-fluid rounded" style="width: 60%; height: auto; object-fit: cover;">
+            <img src="img/img3.png" alt="Agile Framework" class="img-fluid rounded" style="width: 60%; height: auto; object-fit: cover;">
           </div>
           <div class="col-lg-6 order-lg-1">
             <h3>Waterfall<br><small class="text-muted">Approccio Sequenziale</small></h3>
@@ -1013,9 +1013,9 @@ il suo sviluppo.</li>
       <div class="text-center">
         <h2 class="section-titlec">Chaos Report 2020: Agile supera Waterfall in successo e efficienza</h2>
       </div>
-      <div class="two-column">
+      <div class="two-column"style="margin-left: -95px;">
         <div class="column">
-          <p>
+            <p style="margin-left: -5px;"></p>
             Il Chaos Report 2020 del Standish Group fornisce dati concreti che dimostrano perché l’Agile è superiore al Waterfall. Secondo il report, i progetti Agile hanno un tasso di successo del 42%, rispetto a un misero 13% dei progetti Waterfall. Questo significa che i progetti Agile hanno una probabilità tre volte maggiore di avere successo.
 
 </p>
@@ -1040,7 +1040,7 @@ D’altra parte, i progetti Waterfall hanno un tasso di fallimento del 59%, ment
 </section> 
 <!-- Why Agile Section -->
 <section class="article-section" data-aos="fade-up" style="margin-top: 30px; margin-bottom: 50px;">
-    <h2 class="section-titlef mb-5" style="text-align: left; margin-bottom: 2000px; margin-left: 100px;"><b>Il valore strategico di Agile</b></h2>
+    <h2 class="section-titlef mb-5" style="text-align: left; margin-bottom: 2000px; margin-left: 130px;"><b>Il valore strategico di Agile</b></h2>
     <div class="container">
         <div class="row text-center g-4">
             <div class="col-md-3">
