--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
     .hero-section {
       height: 100vh;
-      background: url('img/img1.jpg') no-repeat center center/cover;
+      background: url(img/img1.jpg) no-repeat center center/cover;
       display: flex;
       justify-content: center;
       align-items: center;
@@ -220,7 +220,7 @@
       top: 0;
       width: 70%;
       height: 100%;
-      background: url('img/Risorsa 3.png') no-repeat center center/cover;
+      background: url(img/Risorsa 3.png) no-repeat center center/cover;
       z-index: 1;
       border-radius: 0 60px 60px 0;
     }
@@ -416,7 +416,7 @@
     <h2 class="desktop-mobile-title">Desktop VS Mobile</h2>
     <div class="desktop-mobile-content">
         <div class="desktop-mobile-image-container">
-            <img src="img/img-02.jpg" alt="Desktop vs Mobile" class="desktop-mobile-image">
+            <img src=img/img-02.jpg alt="Desktop vs Mobile" class="desktop-mobile-image">
             <div class="desktop-mobile-icon-search">
                 <i class="bi bi-search"></i>
             </div>
@@ -441,10 +441,10 @@
                 Su mobile, invece, l'interfaccia assume un aspetto più minimalista: le icone sono più grandi per agevolare l'uso touch, i testi sono ridotti e disposti in modo da adattarsi agli schermi più piccoli, privilegiando la semplicità e l'immediatezza nella navigazione.
             </p>
             </div>
-            <img src="img/img3.png" alt="Posizionamento e accessibilità" style="width: 50%; border-radius: 16px;">
+            <img src=img/img3.png alt="Posizionamento e accessibilità" style="width: 50%; border-radius: 16px;">
         </div>
         <div style="display: flex; align-items: center; gap: 20px; margin-top: 20px;">
-            <img src="img/img4.jpg" alt="Funzionalità aggiuntive" style="width: 50%; border-radius: 16px;">
+            <img src=img/img4.jpg alt="Funzionalità aggiuntive" style="width: 50%; border-radius: 16px;">
             
             <div>
                 <h3 style="font-size: 1.7rem; font-weight: 600; margin-bottom: 18px;">Funzionalità aggiuntive</h3>
@@ -488,7 +488,7 @@
                 rende particolarmente adatta all'uso in ambienti 
                 multilingua o interculturali.
             </p>
-            <img src="img/Risorsa 1.png" alt="Lente di Ingrandimento" style="width: 1%; border-radius: 16px; flex: 1;">
+            <img src=img/Risorsa 1.png alt="Lente di Ingrandimento" style="width: 1%; border-radius: 16px; flex: 1;">
         </div>
     </section>
 
